# py_cpp_rpc_example

./: README.md  install_dependecies.sh
cpp/: CMakeLists.txt
cpp/rpc/: CMakeLists.txt
cpp/rpc/include/: rpc_client.hpp  rpc_server.hpp
cpp/rpc/src/: rpc_client.cpp  rpc_server.cpp
python/rpc/: rpc_client.py  rpc_server.py
